--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     },
     "dependencies": {
         "@radix-ui/react-avatar": "^1.1.11",
+        "@radix-ui/react-dialog": "^1.1.15",
         "@radix-ui/react-slot": "^1.2.4",
+        "@types/mime": "^3.0.4",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lucide-react": "^0.562.0",
+        "mime": "^4.1.0",
         "next": "15.1.3",
         "react": "^18",
         "react-dom": "^18",
